# cibuildwheel-demo

./: meson.build  meson_options.txt  pyproject.toml
.github/workflows/: build_wheels.yml  wheels.yml
py/mytool/: __init__.py  __main__.py
src/: main.c
